--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,66 @@
 *.exe
 *.out
 *.app
+/.vs/Coding1-CPPplease/FileContentIndex
+.vs/Coding1-CPPplease/v17/.suo
+.vs/Coding1-CPPplease/v17/Browse.VC.db
+.vs/Coding1-CPPplease/v17/Browse.VC.db-shm
+.vs/Coding1-CPPplease/v17/Browse.VC.db-wal
+.vs/Coding1-CPPplease/v17/Browse.VC.opendb
+.vs/Coding1-CPPplease/v17/DocumentLayout.backup.json
+.vs/Coding1-CPPplease/v17/DocumentLayout.json
+.vs/Coding1-CPPplease/v17/ipch/AutoPCH/678b9a69bc64844a/ADVENTURE.ipch
+.vs/Coding1-CPPplease/v17/ipch/AutoPCH/946486fa353a9799/VARLOGIC.ipch
+.vs/Coding1-CPPplease/v17/ipch/AutoPCH/c256a4aabad7645f/VARLOGIC.ipch
+.vs/Coding1-CPPplease/v17/Solution.VC.db
+Coding1-.C3DD9E69/x64/Debug/Coding1-.C3DD9E69.tlog/CL.command.1.tlog
+Coding1-.C3DD9E69/x64/Debug/Coding1-.C3DD9E69.tlog/Cl.items.tlog
+Coding1-.C3DD9E69/x64/Debug/Coding1-.C3DD9E69.tlog/CL.read.1.tlog
+Coding1-.C3DD9E69/x64/Debug/Coding1-.C3DD9E69.tlog/CL.write.1.tlog
+Coding1-.C3DD9E69/x64/Debug/Coding1-.C3DD9E69.tlog/Coding1-CPPplease.lastbuildstate
+Coding1-.C3DD9E69/x64/Debug/Coding1-.C3DD9E69.tlog/link.command.1.tlog
+Coding1-.C3DD9E69/x64/Debug/Coding1-.C3DD9E69.tlog/link.read.1.tlog
+Coding1-.C3DD9E69/x64/Debug/Coding1-.C3DD9E69.tlog/link.secondary.1.tlog
+Coding1-.C3DD9E69/x64/Debug/Coding1-.C3DD9E69.tlog/link.write.1.tlog
+Coding1-.C3DD9E69/x64/Debug/Coding1-CPPplease.exe.recipe
+Coding1-.C3DD9E69/x64/Debug/Coding1-CPPplease.ilk
+Coding1-.C3DD9E69/x64/Debug/Coding1-CPPplease.log
+Coding1-.C3DD9E69/x64/Debug/vc143.idb
+Coding1-.C3DD9E69/x64/Debug/vc143.pdb
+Coding1-CPPplease.sln
+Coding1-CPPplease.vcxproj
+Coding1-CPPplease.vcxproj.filters
+Coding1-CPPplease.vcxproj.user
+PairProg/.vs/Coding1-CPPFR/FileContentIndex/63b6657c-de35-4758-bd61-73ee6be0bdf7.vsidx
+PairProg/.vs/Coding1-CPPFR/v17/.suo
+PairProg/.vs/Coding1-CPPFR/v17/Browse.VC.db
+PairProg/.vs/Coding1-CPPFR/v17/DocumentLayout.backup.json
+PairProg/.vs/Coding1-CPPFR/v17/DocumentLayout.json
+PairProg/.vs/Coding1-CPPFR/v17/ipch/AutoPCH/22c0b1b631f2a48a/ADVENTURE.ipch
+PairProg/.vs/Coding1-CPPFR/v17/ipch/AutoPCH/2c12c8a3c379a9d9/VARLOGIC.ipch
+PairProg/.vs/Coding1-CPPFR/v17/ipch/AutoPCH/e30f1c19ccd9d614/PAIRPROGTEST.ipch
+PairProg/.vs/Coding1-CPPFR/v17/Solution.VC.db
+PairProg/Coding1-CPPFR.sln
+PairProg/Coding1-CPPFR.vcxproj
+PairProg/Coding1-CPPFR.vcxproj.filters
+PairProg/Coding1-CPPFR.vcxproj.user
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.log
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/CL.command.1.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/CL.read.1.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/CL.write.1.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/Coding1-CPPFR.lastbuildstate
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/link-cvtres.read.1.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/link-cvtres.write.1.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/link-rc.read.1.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/link-rc.write.1.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/link.command.1.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/link.read.1.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/link.read.2.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/link.read.3.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/link.read.4.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/link.write.1.tlog
+PairProg/Coding1-CPPFR/x64/Debug/Coding1-CPPFR.tlog/unsuccessfulbuild
+PairProg/Coding1-CPPFR/x64/Debug/vc143.idb
+PairProg/Coding1-CPPFR/x64/Debug/vc143.pdb
+PairProg/x64/Debug/Coding1-CPPFR.pdb
+x64/Debug/Coding1-CPPplease.pdb
